[package]
name = "level_db_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "level_db_rust"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = "1.24.1"

[profile.dev]


[profile.release]

